--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/tigweb.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/tigweb.data.unityweb",
-        frameworkUrl: buildUrl + "/tigweb.framework.js.unityweb",
-        codeUrl: buildUrl + "/tigweb.wasm.unityweb",
+        dataUrl: buildUrl + "/tigweb.data",
+        frameworkUrl: buildUrl + "/tigweb.framework.js",
+        codeUrl: buildUrl + "/tigweb.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "tigger",
