--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/tigweb.loader.js";
+      var loaderUrl = buildUrl + "/web.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/tigweb.data",
-        frameworkUrl: buildUrl + "/tigweb.framework.js",
-        codeUrl: buildUrl + "/tigweb.wasm",
+        dataUrl: buildUrl + "/web.data",
+        frameworkUrl: buildUrl + "/web.framework.js",
+        codeUrl: buildUrl + "/web.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "tigger",
